--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                  <li>
                      <a href= "Menu/Bebidas.html">Bebidas</a>
                     </li>
+                    <li>tartas</li>
              </ul>
         </nav>
     </header>
